--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
               </li>
               <li>
                 <strong>CSS3:</strong> Diseño responsivo (Flexbox, Grid),
-                animaciones, preprocesadores (Sass/LESS opcional).
+                animaciones, preprocesadores.
               </li>
               <li>
                 <strong>JavaScript (ES6+):</strong> Desarrollo de interfaces
                 interactivas, manipulación del DOM, AJAX, APIs.
               </li>
               <li>
-                <strong>Frameworks/Librerías:</strong> Experiencia con [Menciona
-                alguno: React, Angular, Vue.js, jQuery, etc.].
+                <strong>Frameworks/Librerías:</strong> Experiencia con React y
+                jQuery. alguno: React, Angular, Vue.js, jQuery, etc.].
               </li>
             </ul>
           </div>
@@ -104,11 +104,11 @@
             <ul>
               <li>
                 <strong>Diseño y Modelado:</strong> Bases de datos relacionales
-                (SQL) y NoSQL (ej. MongoDB, Cassandra).
+                (SQL) y NoSQL.
               </li>
               <li>
                 <strong>SGBD:</strong> Administración de MySQL, PostgreSQL, SQL
-                Server, Oracle (menciona los que dominas).
+                Server, Oracle.
               </li>
               <li>
                 <strong>Lenguajes de Consulta:</strong> SQL avanzado,
