--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               </li>
               <li>
                 <strong>Frameworks/Librerías:</strong> Experiencia con React y
-                jQuery. alguno: React, Angular, Vue.js, jQuery, etc.].
+                jQuery.
               </li>
             </ul>
           </div>
